[FS 615] QuickEdit should no longer break on non-enlish languages with longer text strings (1825)

--- a/assets/modules/quick_edit/styles/toolbar.css
+++ b/assets/modules/quick_edit/styles/toolbar.css
@@ -22,11 +22,11 @@
 #QE_Toolbar {
     position: absolute;
     z-index: 10000;
-    width: 200px;
+    width: 220px;
     border-style: solid none none none;
     height: 200px;
     max-height: 15px;
-    background: transparent;
+    background: #fff url(../images/link_bg.png) repeat-x 0 0;
     -moz-opacity: 0.5;
     opacity: 0.5;
     filter: alpha(opacity=80);
@@ -61,7 +61,9 @@ body > #QE_Toolbar {
     background-color: #dfdfdf;
 }
 #QE_Toolbar ul {
-    float: right;
+    position: absolute;
+    top: 0;
+    right: 0;
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -81,8 +83,8 @@ body > #QE_Toolbar {
         position: absolute;
         z-index: 10001;
         top: 15px;
-        left: 0px;
-        width: 198px;
+        right: -1px;
+        width: 218px;
         text-align: left;
         border-style: none solid solid solid;
         background: #fff url(../images/body_bg.png) repeat-x bottom left;
